MODEXPW-614 - Fixing existing code smells