@@ -6,7 +6,6 @@ import org.springframework.batch.item.Chunk;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -14,7 +13,7 @@ public class ListIdentifiersWriteListener<T> implements ItemWriteListener<List<T
   private final IdentifiersWriteListener<T> delegate;
 
   @Override public void afterWrite(Chunk<? extends List<T>> list) {
-    var chunk = new Chunk<>(list.getItems().stream().flatMap(List::stream).collect(Collectors.toList()));
+    var chunk = new Chunk<>(list.getItems().stream().flatMap(List::stream).toList());
     delegate.afterWrite(chunk);
   }
 }
